test/invalid-semantics/66358_assignment_type_missmatch/wrong_assignment.mag
-- Author: 66358, Gustavo Cardoso
fun main (_) : Unit -> Unit = var x : Int = 10; x = false